--- a/web/app/views/add.html
+++ b/web/app/views/add.html
@@ -1,6 +1,7 @@
 <h2 id="otsikko">Add new movie</h2>
 <div id="addMovie">
     <form name="addmovie">
+        <p>{{message}}</p>
         <input type="text" placeholder="name" ng-model="name" required>
         <input type="text" placeholder="director" ng-model="director" required>
         <input type="text" placeholder="year" ng-model="year" required>
