--- a/web/app/views/edit.html
+++ b/web/app/views/edit.html
@@ -5,6 +5,6 @@
         <input type="text" placeholder="director" ng-model="movie.director" required>
         <input type="text" placeholder="year" ng-model="movie.year" required>
         <input type="text" placeholder="description" ng-model="movie.description" required>
-        <button ng-click="save()" ng-disabled="editMovie.$invalid">save changes</button>
+        <button ng-click="save()" ng-disabled="addmovie.$invalid">save changes</button>
     </form>
 </div>
